# originality_ditection

./: .gitignore  README.md  detector_sample.py  pyproject.toml
Originality_Ditection/: __init__.py  model.py
originality_ditection/: detector.py  detector_sample.py  parser.py
