[project]
name = "originality-ditection"
version = "0.1.0"
description = "A library that determines whether a text is written by a human or an AI based on ES questions and answers"
authors = [
    { name = "mizuki baba", email = "mbaba@kanolab.net" },
    { name = "kouhei arasawa", email = "karasawa@kanolab.net" },
]
dependencies = [
    "torch>=2.0.1",
    "transformers>=4.33.2",
    "fugashi>=1.3.0",
    "ipadic>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
